# fuckin-about-with-hs

./: .gitignore  LICENSE  README.md  cabal.config  fuckin-about-with-hs.cabal
src/: Main.hs  QS.hs
tests/: Properties.hs  hlint.hs  properties.hs
