name:                fuckin-about-with-hs
version:             0.1.0.0
synopsis:            Fucking about with haskell to get a simple webapp up and rolling.
description:         Fucking about with haskell to get a simple webapp up and rolling.
homepage:            www.jbirch.net
license:             BSD3
license-file:        LICENSE
author:              Jason Birch
maintainer:          jbirch@jbirch.net
copyright:           BSD3
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git@github.com:jbirch/fuckin-about-with-hs.git


executable fuckin-about-with-hs
  main-is:             Main.hs
  ghc-options:         -Wall
  other-modules:       
  other-extensions:    
  build-depends:       base >= 4.6 && < 4.7,
                       containers >= 0.5.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite hlint
  type:                exitcode-stdio-1.0
  main-is:             hlint.hs
  ghc-options:         -Wall
  hs-source-dirs:      tests
  build-depends:       base,
                       hlint >= 1.8 && < 1.9
  default-language:    Haskell2010

test-suite quickcheck
  type:                exitcode-stdio-1.0
  main-is:             Properties.hs
  ghc-options:         -threaded
  hs-source-dirs:      tests
  build-depends:       base,
                       QuickCheck >= 2.7 && < 2.8,
                       test-framework,
                       test-framework-quickcheck2,
                       test-framework-th
  default-language:    Haskell2010